# miniRT_rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
cpp_src/: main.cpp
rt/: dragon.rt
src/: camera.rs  foreign_function_interfaces.rs  frame_buffer.rs  helpers.rs  init.rs  light.rs  main.rs  num.rs  octree.rs  progress_logger.rs  random_iterator.rs  renderer.rs  resolution.rs  scene.rs  threading.rs  triangle.rs  util.rs  vector.rs  window.rs
src/net/: client.rs  mod.rs  server.rs  socket.rs
src/scene_readers/: cbor.rs  mod.rs  obj.rs  rt.rs
