[package]
name = "minirt_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bmp = "0.5.0"
glob = "0.3.1"
image = "0.24.9"
minifb = "0.25.0"
num-integer = "0.1.45"
num-traits = "0.2.16"
pad = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
tobj = "4.0.0"
# tobj  = { version = "4.0.0", default-features = false, features = ["merging"] }

[build-dependencies]
glob = "0.3.1"
cc = "1.0"
